compiler/tests/fail/asmgen/x86-64/incompatible_args.jazz
export fn main () -> reg u64 {
  reg u64 res;
  stack u128 s;
  s = 300;
  res = s;
  return res;
}
